2007-07-06 Henry Proudhon <henry.proudhon@insa-lyon.fr>
	* swt/org/jfree/experimental/swt/SWTGraphics2D.java
        (getClip): implemented,
	* swt/org/jfree/experimental/chart/swt/ChartComposite.java
        (zoom): fixed bug with multiple plots.

2007-07-04 Henry Proudhon <henry.proudhon@insa-lyon.fr>
	* swt/org/jfree/experimental/chart/swt/ChartComposite.java
	(addChartMouseListener): New method,
	(removeChartMouseListener): Likewise.

2007-07-03  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/XYPlot.java
	(drawZeroDomainBaseline): No need to cast to AbstractXYItemRenderer,
	(setFixedDomainAxisSpace): Fire event,
	(setFixedRangeAxisSpace): Likewise.

2007-07-02  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/xy/StandardXYItemRenderer.java
	(shapesFilled): Removed,
	(StandardXYItemRenderer): Updated for removed field,
	(getItemShapeFilled): Likewise,
	(getShapesFilled): Removed,
	(setShapesFilled): Likewise,
	(equals): Updated for removed field.

2007-07-02  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/editor/DefaultPlotEditor.java
	(updatePlotProperties): Updated for changes to LineAndShapeRenderer,
	* source/org/jfree/chart/renderer/category/LineAndShapeRenderer.java
	(linesVisible): Removed,
	(shapesVisible): Likewise,
	(shapesFilled): Likewise,
	(LineAndShapeRenderer(boolean, boolean)): Likewise,
	(getItemLineVisible): Adjust lookup for removed field,
	(getLinesVisible): Removed,
	(setLinesVisible): Likewise,
	(getItemShapeVisible): Adjust lookup for removed field,
	(getShapesVisible): Removed,
	(setShapesVisible): Likewise,
	(getItemShapeFilled): Adjust lookup for removed field,
	(setShapesFilled): Removed,
	(equals): Updated for removed fields.
	
2007-07-02  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/xy/XYLineAndShapeRenderer.java
	(linesVisible): Removed,
	(shapesVisible): Likewise,